Blaxamarin updates: Have file represent ContentPages, add StackLayout
- Redid root Blaxamarin components to represent a ContentPage, which should make it more generically useful in apps
- Added StackLayout component
- But... found a bug in Emblazon where siblingIndex of elements is always 0 (applies to BlinForms and Blaxamarin, but has a more negative effect in Blaxamarin where sibling order always matters, whereas in BlinForms it rarely matters)

--- a/BlaxamarinSample/BlaxamarinSample/Blaxample.razor
+++ b/BlaxamarinSample/BlaxamarinSample/Blaxample.razor
@@ -1,7 +1,12 @@
 ﻿@using Blaxamarin.Framework.Elements
 
-<Button Text="@("Increment: " + count)" OnClick="@IncrementCount" />
-
+    <StackLayout>
+        <Button Text="@("Increment by 1: " + count)" OnClick="@IncrementCount" />
+        <Button Text="@("Increment by 8: " + count2)" OnClick="@IncrementCount2" />
+        <Button Text="333"></Button>
+        <Button Text="444"></Button>
+        <Button Text="555"></Button>
+    </StackLayout>
 
 @code {
     int count = 0;
@@ -9,5 +14,12 @@
     void IncrementCount()
     {
         count++;
+    }
+
+    int count2 = 0;
+
+    void IncrementCount2()
+    {
+        count2 += 8;
     }
 }
