Factor out some bits into a child component

--- a/BlinFormsSample/WinCounter.razor
+++ b/BlinFormsSample/WinCounter.razor
@@ -1,10 +1,5 @@
-﻿@using BlinForms.Framework.Controls
-@using System.Drawing
-
-<Panel Visible="true" BackColor="Color.Red" Top="240" Left="300" Width="300" Height="200" Anchor="@(System.Windows.Forms.AnchorStyles.Right | System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Bottom)">
-    <Label Top="50" Left="10" Width="150" Height="23" BackColor="Color.Yellow" Text="This label is nested"></Label>
-
-    <TextBox Top="75" Left="20" Height="100" Width="150" Text="Heeeeeeey" Multiline="true" ScrollBars="System.Windows.Forms.ScrollBars.Vertical"></TextBox>
+﻿<Panel Visible="true" BackColor="Color.Red" Top="240" Left="300" Width="300" Height="200" Anchor="@(System.Windows.Forms.AnchorStyles.Right | System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Bottom)">
+    <SomeChildStuff />
 </Panel>
 
 
