Update Blaxamarin TodoApp to use text styles for done items

--- a/BlaxamarinSample/BlaxamarinSample/TodoApp.razor
+++ b/BlaxamarinSample/BlaxamarinSample/TodoApp.razor
@@ -1,4 +1,4 @@
 ﻿<StackLayout>
-    <Label FontSize="20" TextColor="Color.Crimson" Text="Todo Items" />
+    <Label FontSize="20" TextColor="Color.Crimson" Text="Todo Items" HorizontalTextAlignment="TextAlignment.Center" />
     <TodoList />
 </StackLayout>
