--- a/BlaxamarinSample/BlaxamarinSample/TodoList.razor
+++ b/BlaxamarinSample/BlaxamarinSample/TodoList.razor
@@ -1,4 +1,6 @@
-﻿<StackLayout>
+﻿@inject AppState AppState
+
+<StackLayout>
     <StackLayout Orientation="StackOrientation.Horizontal">
         @* Input area *@
         <Entry @bind-Text="newText" Placeholder="What's to be done?" />
@@ -7,7 +9,7 @@
 
     <StackLayout>
         @* List of todos *@
-        @foreach (var item in items)
+        @foreach (var item in AppState.Items)
         {
             <TodoEntry Item="@item" />
         }
@@ -17,16 +19,10 @@
 @code
 {
     string newText;
-    List<TodoItem> items = new List<TodoItem>()
-{
-        new TodoItem{Text="111"},
-        new TodoItem{Text="222"},
-        new TodoItem{Text="333"},
-    };
 
     void AddItem()
     {
-        items.Add(new TodoItem { Text = newText });
+        AppState.Items.Add(new TodoItem { Text = newText });
         newText = null;
     }
 }
