--- a/BlinFormsSample/TodoApp.razor
+++ b/BlinFormsSample/TodoApp.razor
@@ -2,13 +2,13 @@
                 Anchor="@(System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right | System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Left)"
                 Orientation="System.Windows.Forms.Orientation.Vertical"
                 SplitterDistance="350">
-    <SplitterPanel1>
+    <Panel1>
         <Label Top="8" Left="8" Text="Todo Items" />
         <Panel Top="40" Left="8" Width="350" Height="450" BackColor="SystemColors.ControlDark">
             <TodoList />
         </Panel>
-    </SplitterPanel1>
-    <SplitterPanel2>
+    </Panel1>
+    <Panel2>
         <Label Top="8" Left="8" Text="Counter" />
         <Panel Top="40" Left="8">
             <Button Text="Toggle counter" OnClick="@ToggleCounterVisible" />
@@ -19,7 +19,7 @@
                 </Panel>
             }
         </Panel>
-    </SplitterPanel2>
+    </Panel2>
 </SplitContainer>
 
 @code
