Add Todo item on Enter press

--- a/samples/BlaxamarinSample/TodoList.razor
+++ b/samples/BlaxamarinSample/TodoList.razor
@@ -3,7 +3,7 @@
 <StackLayout>
     <StackLayout Orientation="StackOrientation.Horizontal">
         @* Input area *@
-        <Entry @bind-Text="newText" Placeholder="What's to be done?" />
+        <Entry @bind-Text="newText" Placeholder="What's to be done?" OnCompleted="@AddItem" />
         <Button Text="Add" OnClick="@AddItem" />
     </StackLayout>
 
