Add Blaxamarin sample AboutPage
Uses new Label.FormattedText support

--- a/samples/BlaxamarinSample/TodoApp.razor
+++ b/samples/BlaxamarinSample/TodoApp.razor
@@ -8,4 +8,8 @@
     <ContentPage Title="Counter">
         <Counter />
     </ContentPage>
+    <ContentPage Title="About">
+        <About />
+    </ContentPage>
 </TabbedPage>
+ 
