--- a/samples/BlaxamarinSample/TodoList.razor
+++ b/samples/BlaxamarinSample/TodoList.razor
@@ -3,10 +3,10 @@
 <StackLayout>
     <StackLayout Orientation="StackOrientation.Horizontal">
         @* Input area *@
-        <Entry @bind-Text="newText" Placeholder="What's to be done?" OnCompleted="@AddItem" />
-        <Button Text="Add" OnClick="@AddItem" />
+        <Entry @bind-Text="newText" Placeholder="What's to be done?" OnCompleted="@AddItem" IsEnabled="@(!isAdding)" />
+        <Button Text="Add" OnClick="@AddItem" IsEnabled="@(!isAdding)" />
+        <ActivityIndicator Color="Color.Orange" IsRunning="@isAdding" />
     </StackLayout>
-
     <ScrollView>
         <StackLayout>
             @* List of todos *@
@@ -21,10 +21,19 @@
 @code
 {
     string newText;
+    bool isAdding;
 
-    void AddItem()
+    async Task AddItem()
     {
+        isAdding = true;
+        StateHasChanged();
+
+        // Pretend we're calling some API to save the new item
+        await Task.Delay(2000);
+
         AppState.Items.Add(new TodoItem { Text = newText });
         newText = null;
+
+        isAdding = false;
     }
 }
