Code style for demo clarity

--- a/samples/BlaxamarinSample/TodoEntry.razor
+++ b/samples/BlaxamarinSample/TodoEntry.razor
@@ -1,6 +1,9 @@
 ﻿<StackLayout Orientation="StackOrientation.Horizontal">
-    <Switch @bind-IsToggled="Item.IsDone" />
-    <Label Text="@Item.Text" TextDecorations="@(Item.IsDone ? TextDecorations.Strikethrough : TextDecorations.None)" />
+    <Switch
+        @bind-IsToggled="Item.IsDone" />
+    <Label
+        Text="@Item.Text"
+        TextDecorations="@(Item.IsDone ? TextDecorations.Strikethrough : TextDecorations.None)" />
 </StackLayout>
 
 @code
