--- a/samples/BlaxamarinSample/TodoList.razor
+++ b/samples/BlaxamarinSample/TodoList.razor
@@ -3,9 +3,16 @@
 <StackLayout>
     <StackLayout Orientation="StackOrientation.Horizontal">
         @* Input area *@
-        <Entry @bind-Text="newText" Placeholder="What's to be done?" OnCompleted="@AddItem" IsEnabled="@(!isAdding)" />
-        <Button Text="Add" OnClick="@AddItem" IsEnabled="@(!isAdding)" />
-        <ActivityIndicator Color="Color.Orange" IsRunning="@isAdding" />
+        <Entry @bind-Text="newText"
+               Placeholder="What's to be done?"
+               OnCompleted="@AddItem"
+               IsEnabled="@(!isAdding)"
+               HorizontalOptions="LayoutOptions.FillAndExpand" />
+        <Button Text="Add"
+                OnClick="@AddItem"
+                IsEnabled="@(!isAdding)" />
+        <ActivityIndicator Color="Color.Orange"
+                           IsRunning="@isAdding" />
     </StackLayout>
     <ScrollView>
         <StackLayout>
