Add DB support for Todo app
- Updated Todo sample app to be more similar to https://github.com/xamarin/xamarin-forms-samples/tree/master/Todo/Todo
- Now supports extra Notes on todo items
- Can edit, delete, and speak (using native text to speech APIs) the todo items
- Added async loading screen while app is loading (with artificial delay)
- Plumbed DI services for backend-specific implementations into the main shared app

--- a/samples/BlaxamarinSample/TodoEntry.razor
+++ b/samples/BlaxamarinSample/TodoEntry.razor
@@ -1,7 +1,10 @@
-﻿<StackLayout Orientation="StackOrientation.Horizontal">
-    <Switch @bind-IsToggled="Item.IsDone" />
+﻿@inject AppState AppState
+
+<StackLayout Orientation="StackOrientation.Horizontal">
+    <Switch @bind-IsToggled="@Item.IsDone" IsEnabled="false" />
     <Label Text="@Item.Text"
-           TextDecorations="@(Item.IsDone ? TextDecorations.Strikethrough : TextDecorations.None)" />
+           TextDecorations="@(Item.IsDone ? TextDecorations.Strikethrough : TextDecorations.None)"
+           HorizontalOptions="LayoutOptions.FillAndExpand" />
     <Button Text="..."
             OnClick="@OnDetailsClick" />
 </StackLayout>
@@ -26,4 +29,11 @@
     {
         todoEntryDialog.FinishClosingDialog();
     }
+
+    // TODO: Also need to somehow handle IsToggledChanged="@OnToggledChanged" so that the DB update can take place:
+    //public async Task OnToggledChanged()
+    //{
+    //    await AppState.TodoDatabase.SaveItemAsync(Item);
+    //    StateHasChanged();
+    //}
 }
