--- a/samples/BlazorNativeTodo/_Imports.razor
+++ b/samples/BlazorNativeTodo/_Imports.razor
@@ -1,3 +1,3 @@
-﻿@using Blaxamarin.Framework
-@using Blaxamarin.Framework.Elements
+﻿@using Microsoft.Blazor.Native
+@using Microsoft.Blazor.Native.Elements
 @using Xamarin.Forms
